# techmart_ai

./: .env.example  .gitignore  README.md  db_check.py  debug.py  extract_cats.py  extract_specs.py  plan.txt  requirements.txt  scan_all.py  scratch.py  scratch_mp.py  test_graph.py  test_routing.py  test_script_2.py  test_session.py
data/: company_faqs.json  company_tos.json  customers.json  order_history.json  product_catalog_rag.json
docs/Vobiz-X-Pipecat/: bot.py
docs/pipecat-langgraph-example/: .env.example  .gitignore  README.md  pyproject.toml
docs/pipecat-langgraph-example/src/gym_support/: __init__.py  graph.py  langgraph_llm_service.py  mock_data.py  processor.py  prompts.py  server.py  tools.py  voice.py
docs/pipecat-langgraph-example/src/gym_support/static/: index.html
src/: main.py  model_loader.py
src/admin/: router.py
src/admin/templates/: index.html
src/bot/: adapter.py  input_language_detector.py  input_translator.py  pipeline.py  sentiment.py  translator.py  wav_injector.py
src/core/: config.py
src/db/: clickhouse_client.py  ingest.py  migrate_specs.py  schema.py
src/graph/: nodes.py  state.py  tools.py  workflow.py
src/web_call_client/: app.js
techmart_ai/: README.md  requirements.txt
techmart_ai/src/: main.py
techmart_ai/src/admin/: app.py
techmart_ai/src/bot/: adapter.py  pipeline.py
techmart_ai/src/db/: ingest.py
techmart_ai/src/graph/: nodes.py  state.py  workflow.py
techmart_ai/src/web_call_client/: app.js  index.html  (+1 more)
techmart_ai/tests/: test_routing.py
tests/: test_routing.py  test_vobiz_pipeline.py
(+1 files in other folders)
